# AprendizadoDeMaquina

./: README.md
ProjetoFinal/: EfficientNetB2_MachineLearning_DFU.ipynb  algoritmo_para_reconhecimento dos_pes_diabeticos.py  classification report.txt  f1-score-100-efficientnet.ipynb  pyproject.toml
Trabalho01/: cancer.py  iris.py
Trabalho02/: iris.py
