[tool.poetry]
name = "trabalho final"
version = "0.1.0"
description = "Reconhecimento de pés diabéticos"
authors = ["Josué Amaral <josueamaral15@gmail.com>"]
readme = "README.md"
packages = [
    { include = "trabalho_final" }
]

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
opencv-python = "^4.11.0.86"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
tensorflow-io-gcs-filesystem = "0.27.0"
ipython = "8.18.1"
tensorflow = "2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
